docs: README под этап 6 (PostgreSQL через JDBC)
- Описание этапа 6: миграция XML→PostgreSQL, вариант 2-2 (ownerId + один DbStorage)
- Инструкция по установке PostgreSQL, применению schema.sql, настройке db.properties
- Команды сборки и запуска (mvn exec, mvn package, java -jar)
- Раздел про multi-window сценарий
- Архитектурная схема MainApp.start() и потока операций add/update/remove
- Раздел про безопасность (SHA-256, PreparedStatement, gitignore для db.properties)